<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">打卡App</string>
    <string name="action_settings">Settings</string>
    <string name="text_welcome"></string>
    <string name="btn_encode">確定</string>
    <string name="hint_phoneNumber">請輸入手機號碼</string>
    <string name="title_activity_qrimage">QRImage</string>
    <string name="title_activity_qr">QR</string>
    <string name="title_activity_checklog">Checklog</string>
    <string name="title_activity_leave">Leave</string>
    <string name="action_new_event">請假</string>
    <string name="choose_kind">請選擇請假類型</string>
    <string name="choose_startD">請選擇起始日期</string>
    <string name="choose_startT">請選擇起始時間</string>
    <string name="choose_endD">請選擇結束日期</string>
    <string name="choose_endT">請選擇結束時間</string>
    <string name="memo">備註</string>
    <string name="leave">假別</string>
    <string name="reason1">婚</string>
    <string name="reason2">事</string>
    <string name="reason3">喪</string>
    <string name="reason4">病</string>
    <string name="reason5">生理</string>
    <string name="reason6">特休</string>  

</resources>